--- a/public/index.html
+++ b/public/index.html
@@ -40,9 +40,11 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" >
       <link href="/your-path-to-fontawesome/css/all.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto:wght@100&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -57,7 +59,7 @@
   <div id="fb-root"></div>
 
   <!-- Your Plug-in Discussion code -->
-  <div id="fb-customer-chat" class="fb-customerchat">
+  <div id="fb-customer-chat" class="fb-customerchat" theme_color="#e1366a">
   </div>
 
   <script>
@@ -90,10 +92,13 @@
 <style>
 
   p{
-    font-family: "Roboto Thin", sans-serif;
+    font-family: "Quicksand", sans-serif;
   }
-  h1, h2, h3, h4{
+  h1, h2, h3, h4, h5, h6{
     font-family: "poppin", sans-serif;
+  }
+  .fb-customerchat{
+   fill:  #ffdada;
   }
 </style>
 </html>
