--- a/public/index.html
+++ b/public/index.html
@@ -91,11 +91,11 @@
    </body>
 <style>
 
-  p{
-    font-family: "Quicksand", sans-serif;
-  }
   h1, h2, h3, h4, h5, h6{
-    font-family: "poppin", sans-serif;
+    font-family: 'Quicksand', sans-serif;
+  }
+  p{
+    font-family: "Poppins", sans-serif;
   }
   .fb-customerchat{
    fill:  #ffdada;
