--- a/public/index.html
+++ b/public/index.html
@@ -92,10 +92,10 @@
 <style>
 
   h1, h2, h3, h4, h5, h6{
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Poppins SemiBold', sans-serif;
   }
   p{
-    font-family: "Poppins", sans-serif;
+    font-family: "Quicksand", sans-serif;
   }
   .fb-customerchat{
    fill:  #ffdada;
